# strava-to-sqlite

./: .envrc.example  .gitignore  Makefile  Makefile.common  README.org  pyproject.toml  shell.nix
.github/workflows/: test.yml
docs/: README.md
src/strava_to_sqlite/: cli.py  utils.py
tests/: test_strava_to_sqite.py
