[tool.poetry]
name = "bake-python"
version = "0.1.0"
description = "A bakeshop"
authors = ["Hrishikesh Barman <oss@geekodour.org>"]
license = "MIT"
readme = "README.org"
packages = [{include = "bake", from = "src"}]

[tool.poetry.dependencies]
# tool.*.group.*.dependencies$ : These can only be installed via poetry
# tool.poetry.*$ : These can be installed via pip also
python = "^3.11"
structlog = "^23.1.0"

[tool.poetry.group.dev.dependencies]
pudb = "^2022.1.3" # debugging
ipython = "^8.13.2" # debugging
snoop = "^0.4.3" # debugging
isort = "^5.12.0" # import sort
# ruff = "^0.0.270" # linter, not installing here cuz nixos
black = "^23.3.0" # formatter

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
mypy = "^1.3.0"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
